--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,63 @@
 header {
     background-color: #4d4c4c;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    height: 90px;
 }
 
 nav {
+    width: 960px;
     display: flex;
-    justify-content: center;
-    padding: 10px;
+    align-items: center;
+    justify-content: space-between;
+    color: #9b9999;
 }
 
-nav img {
+main {
+    width: 960px ;
+    text-align: center;
+    margin: 0 auto;
+}
+
+main section {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+main section:nth-child(2) img {
+    margin: 0 5px;
+}
+
+main section:last-child {
+    display: flex;
+    align-items: center;
+}
+
+main section:last-child > img {
     margin-right: 20px;
 }
 
-nav ul {
-    list-style: none;
-    margin: 0
+main section:last-child > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: left;
+    overflow-y: auto;
+    max-height: 400px;
+}
+
+main section:last-child h1, p{
+    margin-bottom: 10px;
+}
+
+h1 {
+    font-weight: bold;
+}
+
+button {
+    width: 100px;
 }
 
 footer {
