--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,12 @@ main section {
     margin-bottom: 20px;
 }
 
+main section:nth-child(2) {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
 main section:nth-child(2) img {
     margin: 0 5px;
 }
@@ -42,26 +48,45 @@ main section:last-child > img {
 main section:last-child > div {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    text-align: left;
+    
+    max-height: 400px;
+}
+
+main section:last-child > div > div{
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
     overflow-y: auto;
     max-height: 400px;
 }
 
-main section:last-child h1, p{
+main section:last-child h2, p{
     margin-bottom: 10px;
 }
 
-h1 {
+h2 {
     font-weight: bold;
+    margin-bottom: 10px;
 }
 
 button {
     width: 100px;
+    transition: background-color 350ms;
+    margin-top: 10px;
+}
+
+button:hover { 
+    background-color: #000;
+    color: #fff;
+}
+
+img {
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 footer {
     background-color: #4d4c4c;
     width: 100%;
-    height: 50px;
+    height: 100px;
 }
